Fixed overflow issues when hiding video

--- a/app/content/content.css
+++ b/app/content/content.css
@@ -119,3 +119,7 @@ video {
     height: 100%;
 	opacity: 10;
 }
+
+body.showHiddens {
+	overflow: scroll;
+}
